make it work with java 1.4
git-svn-id: https://svn.apache.org/repos/asf/lenya/trunk@528235 13f79535-47bb-0310-9956-ffa450edef68